Add example of showing labels on wigglehighlighter

--- a/test/data/tracks.conf
+++ b/test/data/tracks.conf
@@ -35,6 +35,7 @@ urlTemplates+=json:{"url":"volvox_microarray_negative.bw", "name": "volvox_negat
 storeClass=MultiBigWig/Store/SeqFeature/MultiBigWig
 storeConf=json:{"storeClass": "JBrowse/Store/SeqFeature/BEDTabix", "urlTemplate": "peaks.bed.gz"}
 autoscale=global
+style.label = function(feature) { return feature.get('seq_id')+':'+feature.get('start')+'..'+feature.get('end') }
 
 
 
