--- a/package.json
+++ b/package.json
@@ -4,13 +4,5 @@
   "main": "index.js",
   "repository": "git@github.com:elsiklab/multibigwig",
   "author": "Colin <colin.diesh@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "lint": "eslint js"
-  },
-  "devDependencies": {
-    "eslint": "^6.3.0",
-    "eslint-config-airbnb-es5": "^1.2.0",
-    "eslint-plugin-react": "^7.14.3"
-  }
+  "license": "MIT"
 }
